microservice/03_workspace/hands-on/sf05/08_grpc_json_transcode/02_proxy/envoy-config.yml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }          #1 admin ui for envoy proxy

static_resources:
  listeners:
    - name: main-listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 5438 }      #2 the listen port for external
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" , grpc: {}}         # 3a grpc:{} means that requests are only forwarded if they are found in the grpc service definition, returning 404 for others
                          route: { cluster: grpc-backend-services, timeout: { seconds: 60 } }   #3b
                http_filters:
                  - name: envoy.grpc_json_transcoder
                    # configuration docs: https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/filter/http/transcoder/v2/transcoder.proto
                    config:
                      proto_descriptor: "/data/json-to-grpc.pb"                    #4
                      services: ["witlab.sf05.v1.JsonToGrpc"]                      #5
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false                          #6
                  - name: envoy.router

  clusters:
    - name: grpc-backend-services                                                  #7
      connect_timeout: 1.25s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: 0.0.0.0                                                  #8   **** Replace {address} to local machine IP ADDRESS ****
            port_value: 5488
